# training_c

./: FillScreen  Makefile  ToyFillScreen.c  ToyRandom.c  ex10  ex10.c  ex11  ex11.c  ex14  ex14.c  ex4  ex4.c  ex7  ex7.c
AdvancedBashScripting/: ch4_parameters  ch4_shift.sh  ch5_quoting.sh  ch6_exit.sh  ch7_tests.sh  cleanup  mydate  toy
CMake/: CMakeCache.txt  CMakeLists.txt  Makefile  TutorialConfig.h  TutorialConfig.h.in  cmake_install.cmake  tutorial.c
CMake/MathFunctions/: Makefile  MathFunctions.h  cmake_install.cmake
CProgrammingLanguage/: CProgrammingBook.vpj
CProgrammingLanguage/ch1/: 1_5_4_wordcount.c  a.out  hello.c
CProgrammingLanguage/ch3/: 3_1_binarysearch.c  3_5_itob.c  a.out  itob
CProgrammingLanguage/ch4/: 4_14_macro.c  4_1_pattern.c  4_2_atof.c  4_3_polishNotation.c  a.out  calculator  pattern  recursion.c
CProgrammingLanguage/ch5/: a.out  alloc.c  arguments.c  day.c  pointerarray.c
CProgrammingLanguage/ch6/: 6_1_keywordcount.c
CodeEval/codecombo/: a.out  codecombo.c  codecombo.txt
CodeEval/fizzbuzz/: a.out  fizzbuzz.c
CodeEval/largestpalindromprime/: a.out  lpp.c
CodeEval/sumofprimes/: a.out  sumofprimes.c
ComputerSystems/: a.out  fork.c
enqueue/: CMakeLists.txt  enqueueTest.c
hw/: problem_1.c  problem_2.c  problem_3.c  problem_4.c  problem_5.c  problem_6.c
hw/A4/: Makefile  problem_1.c  problem_2.c
linkers/: factorial  lib.c  lib.h  main.c
pointers/: makefile  pointer  pointer.c
